<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/security"
            android:icon="@drawable/ic_menu_security"
            android:title="@string/menu_privasi_keamanan"/>
        <item
            android:id="@+id/log"
            android:icon="@drawable/ic_menu_log"
            android:title="@string/menu_log"/>
    </group>
    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/helper"-->
<!--            android:icon="@drawable/ic_menu_help"-->
<!--            android:title="@string/menu_bantuan"/>-->
        <item
            android:id="@+id/aboutApp"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_tentang_kami"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>