<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/butek"
    tools:context=".Login">

    <!-- SHAPE -->
    <View
        android:id="@+id/shape"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/shape"
        android:elevation="4dp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/title_login"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/login"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:background="@drawable/bgedit"
        android:drawableStart="@drawable/ic_user"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="@color/gray"
        android:autofillHints="none" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_key"
        android:drawableEnd="@drawable/ic_visibility_on"
        android:background="@drawable/bgedit"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:autofillHints="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/for_pass"
            android:textColor="@color/teal_new"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/for_pass2"
            android:textStyle="italic"
            android:textColor="@color/purple_700"
            android:layout_marginStart="@dimen/_4sdp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/login_btn"
        android:background="@color/teal_new"/>
</LinearLayout>